fixed spacing issues with long place names in place detail page

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -113,7 +113,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	background-color: $activated-button-color;	
 }
 
-.secondary-buttons .button {
+.place-buttons .secondary-buttons .button {
 	width: 50px;
 }
 
@@ -149,23 +149,21 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .lists-detail-container h2 {
 	font-weight:300;
 	text-align:left;
-	padding-top: 44px;
+	padding-top: 36px;
 	font-size:24px;
 	color:rgba(255,255,255,1); 
-    _text-shadow: 2px 1px rgba(70,10,161,0.8);
 	text-shadow: 2px 1px rgba(0,0,0,0.8);
-	line-height: 22px;	
-	overflow: visible;
+	overflow-y: visible;
 }
 
 .lists-detail-container p {
 	font-weight:200;
 	width: 275px;
 	color:rgba(255,255,255,.75);
+	margin-top: -2px;
 }
 
-.lists-detail-container .list-detail-row {
-	overflow: hidden; 
+.lists-detail-container .list-detail-row { 
 	height: 120px; 
 	width: 100%; 
 	box-shadow:inset 1px 1px 40px 0 rgba(0,0,0,.30); 
@@ -216,25 +214,30 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 }
 
 /* share as much as we can with list detail for places */
-
-.place-detail-container .lists-detail-container h2 {
-	padding: 48px 0 0 0;
-	text-align: center;
-	font-size: 28px;
-	line-height: 12px;
-}
-
-.place-detail-container .lists-detail-container p {
-	text-align: center;
-	padding: 0;
-	width: 100%;
-	color:rgba(255,255,255,.70);
-	
+.place-detail-container .lists-detail-container .list-detail-row {
+	height: auto;
 }
 
 .place-detail-container .lists-detail-container .list-detail-row .list-detail-row-overlay {
 	padding: 0;
 }
+
+.place-detail-container .lists-detail-container h2 {
+	text-align: center;
+	font-size: 28px;
+	padding: 30px 6px 0 6px;
+	margin-bottom: 0;
+}
+
+.place-detail-container .lists-detail-container p {
+	text-align: center;
+	width: 100%;
+	color:rgba(255,255,255,.70);
+	padding-bottom: 26px;
+	margin-top: 0;
+}
+
+
 
 /* Map */
 
